deploy/kustomize/apps/api/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http-api
      protocol: TCP
      port: 80
      targetPort: 8080
