deploy/kustomize/apps/api/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http-api
