deploy/kustomize/apps/api/base/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
  namespace: default
spec:
  gateways:
    - istio-gateway/api-gateway
  hosts:
    - api.local
  http:
    - route:
        - destination:
            host: api.default.svc.cluster.local
            port:
              number: 80
          weight: 100
